finish the backbone
Signed-off-by: Mohammad Afiq <46773936+afiqzx@users.noreply.github.com>

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,4 @@
+/*
 h1 {
   margin-top: 6rem;
   width: 100%;
@@ -8,6 +9,7 @@ h1 {
 html {
   background-color: rgb(225, 225, 225);
 }
+*/
 @media (prefers-color-scheme: dark) {
   html {
     background-color: rgb(25, 25, 25);
